--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
-              <mainClass>entities.Program</mainClass>
+              <mainClass>entidades.Program</mainClass>
             </manifest>
           </archive>
         </configuration>
